@@ -131,7 +131,8 @@ mime_type_info_get_icon (MimeTypeInfo *info)
 	if (info->small_icon_pixbuf == NULL)
 		get_icon_pixbuf (info, mime_type_info_get_icon_path (info), FALSE);
 
-	g_object_ref (G_OBJECT (info->small_icon_pixbuf));
+	if (info->small_icon_pixbuf != NULL)
+		g_object_ref (G_OBJECT (info->small_icon_pixbuf));
 
 	return info->small_icon_pixbuf;
 }
@@ -826,6 +827,9 @@ get_icon_pixbuf (MimeTypeInfo *info, const gchar *icon_path, gboolean want_large
 
 	if (icon_path == NULL)
 		icon_path = gnome_vfs_icon_path_from_filename ("nautilus/i-regular-24.png");
+
+	if (icon_path == NULL)
+		return;
 
 	if ((want_large && info->icon_pixbuf != NULL) || info->small_icon_pixbuf != NULL)
 		return;
